--------------------------------------------------------------------------------

Trunk
----------
2006-??-??
	centaur:
		* OpenBSD patch.

	DLH:
		* amulegui.xpm icon.

	Gerd78:
		* Added autostart-xas to rpm .spec files.
		* Patch for autoconf >= 2.60.
		* Patch for redefinition of $(docdir) in docs/Makefile.am.
		* Patch for aMule .desktop files.
		* Added amulegui desktop icon (with Vollstrecker).
		* Patch for fixing aMule spec file in Fedora and Mandriva.
		* Test for perl File::Copy in configure.

	GonoszTopi:
		* Added ability to compile amulecmd without threading support.
		* Sed denoiser - removes excessive messages from compilation - 
		  Thanks to Vollstrecker for the idea and discussions.
		* Proper restoration of startup locale after checking available
		  locales.
		* Fixed source seeds handling on startup.
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CC's CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.
		* Added support for magnet ed2k links.

	Hermit:
		* Patch for amulecmd history which ensures that when the same command
		  is repeated several times in a row it only gets recorded in the
		  history once.

	jcoy:
		* Set download priority in amulecmd.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.

	Kry:
		* Fixed mldonkey_importer to work with mldonkey >= 2.7.6

	LittleAbacus:
		* Patch to show part file numbers.

	nvinay:
		* Trivial issue with memset found using google codesearch which may
		affect only the debugging.

	Phoenix:
		* Fix for crash in amulegui/DownloadListCtrl.cpp.
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets cvs code.
		* Fixed some gtk2 warnings in extern/listctrl.cpp.
		* Fix for unhandled exception in new skinned toolbar code.
		* Coding style fixes.