@@ -727,6 +727,11 @@ AC_CONFIG_FILES([Makefile
 		 src/utils/xas/Makefile
 		 src/utils/xas/autostart-xas
 		 src/utils/xas/docs/Makefile
+		 src/skins/Makefile
+		 src/skins/gnome/Makefile
+		 src/skins/kde4/Makefile
+		 src/skins/tango/Makefile
+		 src/skins/ubuntu/Makefile
 		 src/webserver/Makefile
 		 src/webserver/src/Makefile
 		 src/webserver/default/Makefile
